Agregar enlaces en lightbox para Mi Cama, EMAV, Gatitos y Alma

--- a/index.html
+++ b/index.html
@@ -15,8 +15,14 @@
   <header class="site-header">
     <div class="container header-row">
       <h1 class="logo">Portafolio</h1>
+      <!-- Botón hamburguesa con SVG lindo -->
       <button id="navToggle" class="nav-toggle" aria-expanded="false" aria-controls="primary-nav" aria-label="Abrir menú">
         <span></span><span></span><span></span>
+        <svg class="icon-bars" width="28" height="22" viewBox="0 0 28 22" aria-hidden="true" focusable="false">
+          <rect x="1" y="1"  width="26" height="4"  rx="2"></rect>
+          <rect x="1" y="9"  width="26" height="4"  rx="2"></rect>
+          <rect x="1" y="17" width="26" height="4"  rx="2"></rect>
+        </svg>
       </button>
       <nav id="primary-nav" class="nav">
         <a href="#proyectos">Proyectos</a>
@@ -27,6 +33,7 @@
   </header>
 
   <main class="container">
+    <!-- Hero -->
     <section class="card hero-card" id="hero">
       <div class="hero-content">
         <div class="hero-text">
@@ -37,6 +44,7 @@
       </div>
     </section>
 
+    <!-- Proyectos -->
     <section class="card" id="proyectos">
       <h3>Proyectos</h3>
       <div class="project-grid">
@@ -53,10 +61,11 @@
       </div>
     </section>
 
+    <!-- Sobre mi -->
     <section class="card" id="sobre-mi">
       <h3>Sobre mi</h3>
       <p class="about-text">
-        Me especializo en diseño UI y desarrollo front‑end. Me gusta crear interfaces limpias,
+        Soy una madre de una pequeña de 7 años amante del anime, kpop y cultura asiatica, me especializo en diseño UI y desarrollo front‑end. Me gusta crear interfaces limpias,
         con buena tipografía y colores suaves, cuidando accesibilidad y performance.
       </p>
 
@@ -69,6 +78,7 @@
       </div>
     </section>
 
+    <!-- Contacto -->
     <section id="contacto" class="contact-section">
       <div class="contact-inner">
         <h3>Contacto</h3>
@@ -87,9 +97,9 @@
         <div class="social">
           <h4>Mis Redes</h4>
           <div class="social-icons">
-            <a class="icon" href="https://www.instagram.com/maria.navarromuno/" aria-label="Instagram">IG</a>
-            <a class="icon" href="https://www.linkedin.com/in/maria-fernanda-navarro-mu%C3%B1oz-8a9116346/" aria-label="LinkedIn">in</a>
-            <a class="icon" href="https://github.com/mariafer2108?tab=repositories" aria-label="GitHub">gh</a>
+            <a class="icon" href="https://www.instagram.com/maria.navarromuno/" target="_blank" rel="noopener noreferrer" aria-label="Instagram">IG</a>
+            <a class="icon" href="https://www.linkedin.com/in/maria-fernanda-navarro-mu%C3%B1oz-8a9116346/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">in</a>
+            <a class="icon" href="https://github.com/mariafer2108?tab=repositories" target="_blank" rel="noopener noreferrer" aria-label="GitHub">gh</a>
             <a class="icon" href="img/cartapresentacion.docx" download="cartapresentacion.docx" aria-label="CartaPresentacion">cp</a>
          </div>
         </div>
