--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <link rel="stylesheet" href="./style.css" />
 </head>
-<body>
+<body class="home-page">
   <header class="site-header">
     <div class="container header-row">
       <h1 class="logo">Portafolio</h1>
@@ -25,90 +25,30 @@
         </svg>
       </button>
       <nav id="primary-nav" class="nav">
-        <a href="#proyectos">Proyectos</a>
         <a href="#sobre-mi">Sobre mi</a>
         <a href="#contacto">Contacto</a>
       </nav>
     </div>
   </header>
 
-  <main class="container">
-    <!-- Hero -->
-    <section class="card hero-card" id="hero">
-      <div class="hero-content">
-        <div class="hero-text">
-          <h2>¡Hola! Soy<br /><span class="strong">Maria Fernanda<br />Navarro</span></h2>
-          <p>Diseñadora y desarrolladora web, apasionada por crear interfaces claras, elegantes.</p>
-        </div>
-        <img class="avatar" src="./img/perfil.png" alt="Foto de perfil" />
-      </div>
-    </section>
-
-    <!-- Proyectos -->
-    <section class="card" id="proyectos">
-      <h3>Proyectos</h3>
-      <div class="project-grid">
-        <img src="./img/micama.jpg" alt="Proyecto 1" data-full-src="./img/micama.jpg" />
-        <img src="./img/emav.JPG" alt="Proyecto 2" data-full-src="./img/emav.JPG" />
-        <img src="./img/gatitos.JPG" alt="Proyecto 3" data-full-src="./img/gatitos.JPG" />
-      </div>
+  <main class="splash-container">
     
-      <div class="project-note">
-        <p>Tambien forme parte del diseño de este proyecto con wordpress:</p>
-        <div class="project-row">
-          <img src="./img/alma.JPG" alt="Proyecto Wordpress" data-full-src="./img/alma.JPG" />
-        </div>
-      </div>
-    </section>
+    <h1 class="main-title">Maria Fernanda Navarro Muñoz</h1>
 
-    <!-- Sobre mi -->
-    <section class="card" id="sobre-mi">
-      <h3>Sobre mi</h3>
-      <p class="about-text">
-        Soy una madre de una pequeña de 7 años amante del anime, kpop y cultura asiatica, me especializo en diseño UI y desarrollo front‑end. Me gusta crear interfaces limpias,
+    <a href="seleccion.html" class="profile-link" title="Entrar al portafolio">
+      <img class="profile-img" src="./img/perfil.png" alt="Maria Fernanda Navarro Muñoz" />
+    </a>
+
+    <h2 class="subtitle">Sobre mi</h2>
+
+    <div class="about-oval">
+      <p>
+        Soy una madre de una pequeña de 7 años amante del anime, kpop y cultura asiatica, 
+        me especializo en diseño UI y desarrollo front end. Me gusta crear interfaces limpias,
         con buena tipografía y colores suaves, cuidando accesibilidad y performance.
       </p>
+    </div>
 
-      <h4 class="skills-title">Habilidades</h4>
-      <div class="skills">
-        <span class="badge">Figma</span>
-        <span class="badge">HTML</span>
-        <span class="badge">CSS</span>
-        <span class="badge">Javascript</span>
-      </div>
-    </section>
-
-    <!-- Contacto -->
-    <section id="contacto" class="contact-section">
-      <div class="contact-inner">
-        <h3>Contacto</h3>
-
-        <form class="contact-form" id="contactForm" action="https://formspree.io/f/meopeakl" method="POST" novalidate>
-          <label for="email">EMAIL</label>
-          <input id="email" name="email" type="email" placeholder="tuemail@ejemplo.com" required />
-
-          <label for="mensaje">Mensaje</label>
-          <textarea id="mensaje" name="message" rows="5" placeholder="Cuéntame tu idea..." required></textarea>
-
-          <button type="submit" class="btn btn-dark">Enviar</button>
-          <p class="form-status" id="formStatus" aria-live="polite"></p>
-        </form>
-
-        <div class="social">
-          <h4>Mis Redes</h4>
-          <div class="social-icons">
-            <a class="icon" href="https://www.instagram.com/maria.navarromuno/" target="_blank" rel="noopener noreferrer" aria-label="Instagram">IG</a>
-            <a class="icon" href="https://www.linkedin.com/in/maria-fernanda-navarro-mu%C3%B1oz-8a9116346/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">in</a>
-            <a class="icon" href="https://github.com/mariafer2108?tab=repositories" target="_blank" rel="noopener noreferrer" aria-label="GitHub">gh</a>
-            <a class="icon" href="img/cartapresentacion.docx" download="cartapresentacion.docx" aria-label="CartaPresentacion">cp</a>
-         </div>
-        </div>
-      </div>
-
-      <footer class="site-footer">
-        <small>copyright © 2025</small>
-      </footer>
-    </section>
   </main>
 
   <script src="./script.js"></script>
