--- a/index.html
+++ b/index.html
@@ -32,12 +32,21 @@
   </header>
 
   <main class="splash-container">
+    <div class="social-profile">
+      <a class="social-link social-left" href="https://www.linkedin.com/in/maria-fernanda-navarro-mu%C3%B1oz-8a9116346/" target="_blank" rel="noopener" aria-label="LinkedIn">
+        <svg width="28" height="28" viewBox="0 0 24 24" fill="none" aria-hidden="true"><path fill="#fff" d="M4.983 3.5a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5ZM3.5 8.75h2.966v11.75H3.5V8.75Zm6.217 0h2.842v1.604h.04c.396-.75 1.364-1.544 2.809-1.544 3.006 0 3.563 1.979 3.563 4.553v7.187h-2.966v-6.372c0-1.52-.027-3.478-2.12-3.478-2.123 0-2.449 1.658-2.449 3.368v6.482H9.717V8.75Z"/></svg>
+      </a>
+      <a href="seleccion.html" class="profile-link" title="Entrar al portafolio">
+        <img class="profile-img" src="./img/perfil.png" alt="Maria Fernanda Navarro Muñoz" />
+      </a>
+      <a class="social-link social-right" href="https://github.com/mariafer2108" target="_blank" rel="noopener" aria-label="GitHub">
+        <svg width="28" height="28" viewBox="0 0 24 24" fill="none" aria-hidden="true"><path fill="#fff" d="M12 .5A11.5 11.5 0 0 0 .5 12c0 5.09 3.303 9.4 7.887 10.915.577.107.788-.25.788-.556 0-.274-.01-1-.016-1.962-3.208.697-3.885-1.545-3.885-1.545-.525-1.334-1.283-1.69-1.283-1.69-1.048-.717.079-.703.079-.703 1.16.082 1.771 1.19 1.771 1.19 1.03 1.766 2.706 1.255 3.364.96.106-.757.403-1.256.733-1.545-2.56-.292-5.252-1.28-5.252-5.696 0-1.259.45-2.289 1.188-3.096-.12-.292-.515-1.467.114-3.06 0 0 .967-.31 3.17 1.183a11.02 11.02 0 0 1 2.887-.389c.981.004 1.97.133 2.893.39 2.2-1.494 3.165-1.183 3.165-1.183.63 1.594.235 2.769.116 3.06.74.807 1.186 1.837 1.186 3.096 0 4.429-2.698 5.399-5.267 5.685.416.36.787 1.081.787 2.189 0 1.58-.014 2.852-.014 3.24 0 .309.208.671.796.555A11.503 11.503 0 0 0 23.5 12 11.5 11.5 0 0 0 12 .5Z"/></svg>
+      </a>
+    </div>
     
     <h1 class="main-title">Maria Fernanda Navarro Muñoz</h1>
 
-    <a href="seleccion.html" class="profile-link" title="Entrar al portafolio">
-      <img class="profile-img" src="./img/perfil.png" alt="Maria Fernanda Navarro Muñoz" />
-    </a>
+    <p class="click-note">Haz clic en la foto para entrar y ver más contenido</p>
 
     <h2 class="subtitle">Sobre mi</h2>
 
