--- a/certificados.html
+++ b/certificados.html
@@ -41,16 +41,10 @@
         <!-- Certificado 1 -->
         <div class="certificate-card">
           <div class="certificate-icon">
-            <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
-              <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
-              <polyline points="14 2 14 8 20 8"></polyline>
-              <line x1="16" y1="13" x2="8" y2="13"></line>
-              <line x1="16" y1="17" x2="8" y2="17"></line>
-              <polyline points="10 9 9 9 8 9"></polyline>
-            </svg>
+            <img src="./img/medalla.png" alt="Medalla" />
           </div>
-          <h4 class="certificate-title">Título Profesional</h4>
-          <a href="./certificados/Certificado  Título.pdf" target="_blank" class="btn-small">
+          <h4 class="certificate-title">Título de Liceo</h4>
+          <a href="./certificados/certificado titulo liceo feña.pdf" target="_blank" class="btn-small">
             Ver Certificado
           </a>
         </div>
@@ -58,13 +52,7 @@
         <!-- Certificado 2 -->
         <div class="certificate-card">
           <div class="certificate-icon">
-            <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
-              <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
-              <polyline points="14 2 14 8 20 8"></polyline>
-              <line x1="16" y1="13" x2="8" y2="13"></line>
-              <line x1="16" y1="17" x2="8" y2="17"></line>
-              <polyline points="10 9 9 9 8 9"></polyline>
-            </svg>
+            <img src="./img/medalla.png" alt="Medalla" />
           </div>
           <h4 class="certificate-title">Storytelling en Marketing Digital</h4>
           <a href="./certificados/Storytelling en el Marketing Digital.pdf" target="_blank" class="btn-small">
@@ -75,13 +63,7 @@
         <!-- Certificado 3 -->
         <div class="certificate-card">
           <div class="certificate-icon">
-            <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
-              <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
-              <polyline points="14 2 14 8 20 8"></polyline>
-              <line x1="16" y1="13" x2="8" y2="13"></line>
-              <line x1="16" y1="17" x2="8" y2="17"></line>
-              <polyline points="10 9 9 9 8 9"></polyline>
-            </svg>
+            <img src="./img/medalla.png" alt="Medalla" />
           </div>
           <h4 class="certificate-title">UX/UI Figma</h4>
           <a href="./certificados/UX UI  FIGMA.pdf" target="_blank" class="btn-small">
@@ -92,13 +74,7 @@
         <!-- Certificado 4 -->
         <div class="certificate-card">
           <div class="certificate-icon">
-            <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
-              <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
-              <polyline points="14 2 14 8 20 8"></polyline>
-              <line x1="16" y1="13" x2="8" y2="13"></line>
-              <line x1="16" y1="17" x2="8" y2="17"></line>
-              <polyline points="10 9 9 9 8 9"></polyline>
-            </svg>
+            <img src="./img/medalla.png" alt="Medalla" />
           </div>
           <h4 class="certificate-title">WordPress</h4>
           <a href="./certificados/WordPress Certificado.pdf" target="_blank" class="btn-small">
@@ -109,13 +85,7 @@
         <!-- Certificado 5 -->
         <div class="certificate-card">
           <div class="certificate-icon">
-            <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
-              <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
-              <polyline points="14 2 14 8 20 8"></polyline>
-              <line x1="16" y1="13" x2="8" y2="13"></line>
-              <line x1="16" y1="17" x2="8" y2="17"></line>
-              <polyline points="10 9 9 9 8 9"></polyline>
-            </svg>
+            <img src="./img/medalla.png" alt="Medalla" />
           </div>
           <h4 class="certificate-title">Introducción a Python</h4>
           <a href="./certificados/certificado introduccion python.pdf" target="_blank" class="btn-small">
@@ -126,13 +96,7 @@
         <!-- Certificado 6 -->
         <div class="certificate-card">
           <div class="certificate-icon">
-            <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
-              <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
-              <polyline points="14 2 14 8 20 8"></polyline>
-              <line x1="16" y1="13" x2="8" y2="13"></line>
-              <line x1="16" y1="17" x2="8" y2="17"></line>
-              <polyline points="10 9 9 9 8 9"></polyline>
-            </svg>
+            <img src="./img/medalla.png" alt="Medalla" />
           </div>
           <h4 class="certificate-title">Certificado UI/UX</h4>
           <a href="./certificados/certificado uiux.pdf" target="_blank" class="btn-small">
