Diseño: activar lightbox en imágenes de diseño gráfico y cursor clickeable

--- a/web.html
+++ b/web.html
@@ -72,7 +72,7 @@
   </main>
 
   <footer class="site-footer">
-    <small>copyright © 2025</small>
+    <small>© 2026 Maria Navarro</small>
   </footer>
 
   <script src="./script.js"></script>
