Navegación: eliminar enlace 'Sobre mi' en todas las páginas

--- a/certificados.html
+++ b/certificados.html
@@ -26,7 +26,6 @@
       <nav id="primary-nav" class="nav">
         <a href="index.html">Inicio</a>
         <a href="certificados.html" class="active">Certificados</a>
-        <a href="index.html#sobre-mi">Sobre mi</a>
         <a href="index.html#contacto">Contacto</a>
       </nav>
     </div>
@@ -128,7 +127,7 @@
   </main>
 
   <footer class="site-footer">
-    <small>copyright © 2025</small>
+    <small>© Maria Navarro 2026</small>
   </footer>
 
   <script src="./script.js"></script>
