--- a/seleccion.html
+++ b/seleccion.html
@@ -123,7 +123,6 @@
       </button>
       <nav id="primary-nav" class="nav">
         <a href="index.html">Inicio</a>
-        <a href="index.html#sobre-mi">Sobre mi</a>
         <a href="index.html#contacto">Contacto</a>
       </nav>
     </div>
@@ -138,7 +137,7 @@
   </main>
 
   <footer class="site-footer">
-    <small>copyright © 2025</small>
+    <small>© Maria Navarro 2026</small>
   </footer>
 
   <script src="./script.js"></script>
