--- a/certificados.html
+++ b/certificados.html
@@ -26,7 +26,7 @@
       <nav id="primary-nav" class="nav">
         <a href="index.html">Inicio</a>
         <a href="certificados.html" class="active">Certificados</a>
-        <a href="index.html#contacto">Contacto</a>
+        <a href="#contacto">Contacto</a>
       </nav>
     </div>
   </header>
