--- a/seleccion.html
+++ b/seleccion.html
@@ -123,7 +123,7 @@
       </button>
       <nav id="primary-nav" class="nav">
         <a href="index.html">Inicio</a>
-        <a href="index.html#contacto">Contacto</a>
+        <a href="#contacto">Contacto</a>
       </nav>
     </div>
   </header>
@@ -134,6 +134,25 @@
       <a href="diseno.html" class="globo" target="_blank" rel="noopener">Diseño<br>Gráfico</a>
       <a href="certificados.html" class="globo" target="_blank" rel="noopener">Certificados</a>
     </div>
+    <section class="card" id="contacto">
+      <h3>Contacto</h3>
+      <p style="margin-bottom: 20px;">¿Tienes algún proyecto en mente? ¡Escríbeme!</p>
+      <form class="contact-form" action="#" method="POST">
+        <div class="form-group">
+          <label for="nombre">Nombre</label>
+          <input type="text" id="nombre" name="nombre" required>
+        </div>
+        <div class="form-group">
+          <label for="email">Email</label>
+          <input type="email" id="email" name="email" required>
+        </div>
+        <div class="form-group">
+          <label for="mensaje">Mensaje</label>
+          <textarea id="mensaje" name="mensaje" rows="5" required></textarea>
+        </div>
+        <button type="submit" class="btn">Enviar Mensaje</button>
+      </form>
+    </section>
   </main>
 
   <footer class="site-footer">
