--- a/web.html
+++ b/web.html
@@ -25,7 +25,7 @@
       </button>
       <nav id="primary-nav" class="nav">
         <a href="index.html">Inicio</a>
-        <a href="index.html#contacto">Contacto</a>
+        <a href="#contacto">Contacto</a>
       </nav>
     </div>
   </header>
