--- a/certificados.html
+++ b/certificados.html
@@ -36,41 +36,8 @@
       <h3>Certificados</h3>
       <p style="color: var(--text-2); margin-bottom: 20px;">Mis certificaciones y logros académicos.</p>
       
+      <h4>Desarrollo Web</h4>
       <div class="project-grid">
-        <!-- Certificado 1 -->
-        <div class="certificate-card">
-          <div class="certificate-icon">
-            <img src="./img/medalla.png" alt="Medalla" />
-          </div>
-          <h4 class="certificate-title">Título de Liceo</h4>
-          <a href="./certificados/certificado titulo liceo feña.pdf" target="_blank" class="btn-small">
-            Ver Certificado
-          </a>
-        </div>
-
-        <!-- Certificado 2 -->
-        <div class="certificate-card">
-          <div class="certificate-icon">
-            <img src="./img/medalla.png" alt="Medalla" />
-          </div>
-          <h4 class="certificate-title">Storytelling en Marketing Digital</h4>
-          <a href="./certificados/Storytelling en el Marketing Digital.pdf" target="_blank" class="btn-small">
-            Ver Certificado
-          </a>
-        </div>
-
-        <!-- Certificado 3 -->
-        <div class="certificate-card">
-          <div class="certificate-icon">
-            <img src="./img/medalla.png" alt="Medalla" />
-          </div>
-          <h4 class="certificate-title">UX/UI Figma</h4>
-          <a href="./certificados/UX UI  FIGMA.pdf" target="_blank" class="btn-small">
-            Ver Certificado
-          </a>
-        </div>
-
-        <!-- Certificado 4 -->
         <div class="certificate-card">
           <div class="certificate-icon">
             <img src="./img/medalla.png" alt="Medalla" />
@@ -80,8 +47,6 @@
             Ver Certificado
           </a>
         </div>
-
-        <!-- Certificado 5 -->
         <div class="certificate-card">
           <div class="certificate-icon">
             <img src="./img/medalla.png" alt="Medalla" />
@@ -91,8 +56,37 @@
             Ver Certificado
           </a>
         </div>
+      </div>
 
-        <!-- Certificado 6 -->
+      <h4>Diseño</h4>
+      <div class="project-grid">
+        <div class="certificate-card">
+          <div class="certificate-icon">
+            <img src="./img/medalla.png" alt="Medalla" />
+          </div>
+          <h4 class="certificate-title">Certificado de Título</h4>
+          <a href="./certificados/Certificado  Título.pdf" target="_blank" class="btn-small">
+            Ver Certificado
+          </a>
+        </div>
+        <div class="certificate-card">
+          <div class="certificate-icon">
+            <img src="./img/medalla.png" alt="Medalla" />
+          </div>
+          <h4 class="certificate-title">Storytelling en Marketing Digital</h4>
+          <a href="./certificados/Storytelling en el Marketing Digital.pdf" target="_blank" class="btn-small">
+            Ver Certificado
+          </a>
+        </div>
+        <div class="certificate-card">
+          <div class="certificate-icon">
+            <img src="./img/medalla.png" alt="Medalla" />
+          </div>
+          <h4 class="certificate-title">UX/UI Figma</h4>
+          <a href="./certificados/UX UI  FIGMA.pdf" target="_blank" class="btn-small">
+            Ver Certificado
+          </a>
+        </div>
         <div class="certificate-card">
           <div class="certificate-icon">
             <img src="./img/medalla.png" alt="Medalla" />
