--- a/web.html
+++ b/web.html
@@ -29,6 +29,10 @@
       </nav>
     </div>
   </header>
+  <a href="https://github.com/mariafer2108" class="corner-github" target="_blank" rel="noopener" aria-label="Ir a GitHub">
+    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true"><path fill="#fff" d="M12 .5A11.5 11.5 0 0 0 .5 12c0 5.09 3.303 9.4 7.887 10.915.577.107.788-.25.788-.556 0-.274-.01-1-.016-1.962-3.208.697-3.885-1.545-3.885-1.545-.525-1.334-1.283-1.69-1.283-1.69-1.048-.717.079-.703.079-.703 1.16.082 1.771 1.19 1.771 1.19 1.03 1.766 2.706 1.255 3.364.96.106-.757.403-1.256.733-1.545-2.56-.292-5.252-1.28-5.252-5.696 0-1.259.45-2.289 1.188-3.096-.12-.292-.515-1.467.114-3.06 0 0 .967-.31 3.17 1.183a11.02 11.02 0 0 1 2.887-.389c.981.004 1.97.133 2.893.39 2.2-1.494 3.165-1.183 3.165-1.183.63 1.594.235 2.769.116 3.06.74.807 1.186 1.837 1.186 3.096 0 4.429-2.698 5.399-5.267 5.685.416.36.787 1.081.787 2.189 0 1.58-.014 2.852-.014 3.24 0 .309.208.671.796.555A11.503 11.503 0 0 0 23.5 12 11.5 11.5 0 0 0 12 .5Z"/></svg>
+    <span>Ir a GitHub</span>
+  </a>
 
   <main class="container">
     <section class="card" id="proyectos">
